--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -9,7 +9,7 @@ h1{
     font-family: "Josefin Sans", sans-serif;
     font-size: 2.0rem;
     border-bottom: 3px solid rgb(115, 115, 114);
-    letter-spacing: 1.2rem;
+    letter-spacing: 1.2em;
     text-shadow: 1px 1px 2px black;
     text-size-adjust: 1.2rem ;
 
